Sun Aug 29 15:34:43 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/NodeApplicationManager/NodeApplicationManager_Impl.cpp:
        * DAnCE/NodeManager/NodeManager_Impl.cpp:

          Bugfixes for localityconfiguration command line option.

        * DAnCE/tools/System_Health/Interceptors/SHS_CORBA_Transport.cpp:
        * DAnCE/tools/System_Health/Interceptors/SHS_Interceptor.mpc:

          Bugfixes.

        * examples/Hello/descriptors/run_test_shs.pl:
        * examples/Hello/descriptors/shs.localityconfig:

          Modified test to load SHS interceptor from localityconfig file.

Sat Aug 28 21:03:06 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/DAnCE/DAnCE_Properties.idl:
        * DAnCE/LocalityManager/Handler/LocalityActivator_Impl.cpp:
        * DAnCE/NodeManager/Node_Manager_Module.h:
        * DAnCE/NodeManager/Node_Manager_Module.cpp:

          Added command line option to pass a localityconfiguration file to
          any locality managers spawned by the node manager.

Sat Aug 28 20:38:42 UTC 2010  William R. Otte  <wotte@dre.vanderbilt.edu>

        * DAnCE/LocalityManager/Daemon/Locality_Manager_Task.cpp:
        * DAnCE/LocalityManager/Handler/Plugin_Conf.cpp:
        * DAnCE/tests/CIAO/Executor-Destructor/Exec_Dest_Status.cpp:
        * DAnCE/tests/CIAO/Executor-Destructor/Executor_Destructor_Interceptor.h:

          Fuzz.

Sat Aug 28 09:56:52 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * examples/DevGuideExamples/Messenger/History_exec_i.cpp:
        * examples/DevGuideExamples/Messenger/Messenger_exec_i.cpp:
        * examples/DevGuideExamples/Messenger/Publication_exec_i.cpp:
          Fixed compile errors

Fri Aug 27 18:38:37 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * connectors/dds4ccm/tests/CSLDeadline/Sender/CSL_DeadlineTest_Sender_exec.cpp: